force-app/main/default/objects/AVATAR__x/AVATAR__x.object-meta.xml
<CustomObject>
    <description>AVATAR</description>
    <externalDataSource>sights_dev_db</externalDataSource>
    <externalName>AVATAR</externalName>
    <label>アバター</label>
</CustomObject>