force-app/main/default/objects/AVATAR__x/fields/avatar_id__c.field-meta.xml
<CustomField>
    <fullName>avatar_id__c</fullName>
    <description>avatar_id</description>
    <externalDeveloperName>avatar_id</externalDeveloperName>
    <label>avatar_id</label>
    <length>36</length>
    <type>Text</type>
</CustomField>