force-app/main/default/objects/AVATAR__x/fields/avatar_status_mst_id__c.field-meta.xml
<CustomField>
    <fullName>avatar_status_mst_id__c</fullName>
    <description>avatar_status_mst_id</description>
    <externalDeveloperName>avatar_status_mst_id</externalDeveloperName>
    <label>avatar_status_mst_id</label>
    <length>36</length>
    <type>Text</type>
</CustomField>