force-app/main/default/objects/AVATAR__x/fields/user_mng_id__c.field-meta.xml
<CustomField>
    <fullName>user_mng_id__c</fullName>
    <description>user_mng_id</description>
    <externalDeveloperName>user_mng_id</externalDeveloperName>
    <label>user_mng_id</label>
    <length>36</length>
    <type>Text</type>
</CustomField>